[package]
name = "wfc-rust"
version = "0.1.0"
authors = ["dpwdec <declankolakowski@gmail.com>", "Marcus Desai <marcus.desai@gmail.com>"]
edition = "2018"
repository = "https://github.com/SaiskiFunctions/GraphWFC.rs"

[dependencies]
rand = "0.8.3"
nalgebra = "0.23.2"
bencher = "0.1.5"
hashbrown = "0.9.1"
alga = "0.9.3"
image = "0.23.8"
itertools = "0.9.0"
num-traits = "0.2.12"
bimap = "0.5.2"
bit-set = "0.5.2"
#utote = { version = "0.3.4", features = ["packed_simd", "rand"] }
utote = { features = ["packed_simd", "rand"], path = "../utote" }
typenum = "1.12.0"

[[bench]]
name = "benches"
harness = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
opt-level = 3
#debug = true
debug-assertions = false
overflow-checks = false
#lto = "fat"
incremental = false
#codegen-units = 1
rpath = false
