[package]
name = "wfc-rust"
version = "0.1.0"
authors = ["dpwdec <declankolakowski@gmail.com>", "Marcus Desai <marcus.desai@gmail.com>"]
edition = "2018"
repository = "https://github.com/SaiskiFunctions/GraphWFC.rs"

[dependencies]
rand = "0.8.3"
nalgebra = "0.25.3"
hashbrown = "0.11.2"
image = "0.23.14"
itertools = "0.10.0"
num-traits = "0.2.14"
bimap = "0.6.0"
bit-set = "0.5.2"
utote = { version = "0.3.5", features = ["packed_simd", "rand"] }
typenum = "1.13.0"
indexmap = "1.6.2"
num = "0.4.0"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "benches"
harness = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
opt-level = 3
#debug = true
debug-assertions = false
overflow-checks = false
#lto = "fat"
incremental = false
#codegen-units = 1
rpath = false
